# socialclipper

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  run.sh
src/socialclipper/: __init__.py  analyzer.py  app.py  clipper.py  config.py  downloader.py  drafter.py  output.py  pipeline.py  transcriber.py
static/: app.js  index.html  library.html  nav-badge.js  processing.html  settings.html  style.css  theme.js  voice.html  welcome.html
