[project]
name = "socialclipper"
version = "0.1.0"
description = "AI-powered video-to-social-clips pipeline. Transcribe, analyze, clip, and draft social media posts automatically."
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper>=0.4",
    "anthropic>=0.49",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.18",
]

[project.scripts]
socialclipper = "socialclipper.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
